Fix #6333 - Prevent overflow of contents for expressions (#6334)

--- a/src/components/SecondaryPanes/Breakpoints.css
+++ b/src/components/SecondaryPanes/Breakpoints.css
@@ -49,7 +49,7 @@
 }
 
 .breakpoints-list .breakpoint {
-  height: var(--breakpoint-expression-height);
+  min-height: var(--breakpoint-expression-height);
 }
 
 .breakpoints-exceptions-caught {
